Add startWiremock task

--- a/src/main/resources/META-INF/gradle-plugins/com.williamhill.wiremock.properties
+++ b/src/main/resources/META-INF/gradle-plugins/com.williamhill.wiremock.properties
@@ -1,1 +1,1 @@
-implementation-class=com.github.william_hill_online.cassandra.GradleWiremockPlugin
+implementation-class=com.github.william_hill_online.wiremock.GradleWiremockPlugin
