--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-group 'com.github.william_hill_online'
-version '0.4.1'
+group GROUP
+version VERSION_NAME
 
 buildscript {
   repositories {
@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'signing'
 apply plugin: "com.gradle.plugin-publish"
 
 repositories {
@@ -32,14 +33,14 @@ dependencies {
 }
 
 pluginBundle {
-  website = 'https://github.com/William-Hill-Online/wiremock-gradle-plugin'
-  vcsUrl = 'https://github.com/William-Hill-Online/wiremock-gradle-plugin'
-  description = 'Ultra-lightweight, super-simple WireMock Gradle Plugin.'
+  website = POM_URL
+  vcsUrl = POM_URL
+  description = POM_DESCRIPTION
   tags = ['wiremock']
 
   plugins {
     wiremockPlugin {
-      id = 'com.williamhill.wiremock'
+      id = 'com.github.william-hill-online.wiremock'
       displayName = 'Gradle Wiremock plugin'
     }
   }
@@ -47,4 +48,80 @@ pluginBundle {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.0'
+}
+
+def isReleaseBuild() {
+    return !VERSION_NAME.contains("SNAPSHOT")
+}
+
+def getRepositoryUsername() {
+    return hasProperty('NEXUS_USERNAME') ? NEXUS_USERNAME : ""
+}
+
+def getRepositoryPassword() {
+    return hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ""
+}
+
+signing {
+    required { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            // POM signature
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+            // Target repository
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
+            }
+
+            pom.groupId = GROUP
+            pom.artifactId = POM_ARTIFACT_ID
+            pom.version = VERSION_NAME
+
+            pom.project {
+                name POM_NAME
+                description POM_DESCRIPTION
+                packaging 'jar'
+                url POM_URL
+
+                scm {
+                    connection POM_SCM_CONNECTION
+                    developerConnection POM_SCM_DEV_CONNECTION
+                    url POM_SCM_URL
+                }
+
+                licenses {
+                    license {
+                        name POM_LICENCE_NAME
+                        url POM_LICENCE_URL
+                        distribution POM_LICENCE_DIST
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'davidrg13'
+                        name = 'davidrg13'
+                    }
+                }
+            }
+        }
+    }
 }
