--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,11 @@
-group GROUP
-version VERSION_NAME
-
-buildscript {
-  repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
-  }
-  dependencies {
-    classpath "com.gradle.publish:plugin-publish-plugin:0.9.7"
-  }
+plugins {
+    id 'groovy'
+    id 'maven'
+    id 'java-gradle-plugin'
+    id "com.gradle.plugin-publish" version "0.9.10"
 }
 
-apply plugin: 'groovy'
-apply plugin: 'maven'
 apply plugin: 'signing'
-apply plugin: "com.gradle.plugin-publish"
 
 repositories {
     mavenLocal()
@@ -32,19 +22,8 @@ dependencies {
     }
 }
 
-task createPluginClasspath {
-    def outputDir = file("${buildDir}/resources/test")
-
-    inputs.files sourceSets.test.runtimeClasspath
-    outputs.dir outputDir
-
-    doLast {
-        outputDir.mkdirs()
-        file("${outputDir}/plugin-classpath.txt").text = sourceSets.test.runtimeClasspath.join('\n',)
-    }
-}
-
-test.dependsOn createPluginClasspath
+group GROUP
+version VERSION_NAME
 
 pluginBundle {
   website = POM_URL
@@ -61,7 +40,7 @@ pluginBundle {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.0'
+    gradleVersion = '4.8'
 }
 
 def isReleaseBuild() {
